# rs_assist_dc

./: README.md  air_build.py  align.py  align_all_sensor.py  attrs_utils.py  build.sh  build_pyrealsense.sh  calibrate.sh  clean_old_image.py  clear_env.sh  display_rs_assist_dc.ipynb  gen_tm.py  imgui.ini  infer_sequence.py  kvtools.py  rs2_multi_align.py  rs2_multi_dev.py  setenv.sh  simulate_cam_cap.py  start_env.sh  start_rs_server.sh  statcap.tar.bz2  stop_rs_server.sh  sync_time.sh  time_syncronize  tm.txt  xeye_calib.py
MultiCamCalib/: .gitignore  CMakeLists.txt  Makefile  Readme.md  build.sh  cmake_install.cmake  main.cpp
MultiCamCalib/include/: MultiCamCalib.h  param.h  tag_detector.h
MultiCamCalib/src/: MultiCamCalib.cc  param.cc  tag_detector.cc
shel-cam-3d/: .gitignore  BCLOUD  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  check_os.sh  cmake_install.cmake  main.cpp  main.cpp.bk  pipeline.py  result.txt
shel-cam-3d/cmake/: FindEigen3.cmake
shel-cam-3d/data/: leftIntrinsic.txt  transsWorldToCam.txt
shel-cam-3d/data/test_data/cam2.bk/: 13-0_Depth.raw  13-1_Depth.raw  13-2_Depth.raw  13-3_Depth.raw  14-0_Depth.raw  14-1_Depth.raw  14-2_Depth.raw  14-3_Depth.raw  15-0_Depth.raw  15-1_Depth.raw  15-2_Depth.raw  15-3_Depth.raw  16-0_Depth.raw  16-1_Depth.raw  16-2_Depth.raw  16-3_Depth.raw  17-1_Depth.raw  17-2_Depth.raw  17-3_Depth.raw  18-0_Depth.raw  18-1_Depth.raw  18-2_Depth.raw  18-3_Depth.raw  (+29 more)
shel-cam-3d/include/: multiview.h
shel-cam-3d/param/: leftIntrinsic.txt  transsWorldToCam.txt
shel-cam-3d/src/: multiview.cc  util.cc
(+156 files in other folders)
